Fixed Chrome FAQ bug and hero spillover

--- a/cdn/style_src/_hero.scss
+++ b/cdn/style_src/_hero.scss
@@ -9,22 +9,22 @@
 
 section[is='hero-section'] { /* startfold */
     display: grid;
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
     padding: 0;
     * {
       color: var(--color-one);
     }
-
+    h1, h2, p {
+        max-width: min(1200px, 100vw);
+        overflow-wrap: anywhere;
+    }
     h2 {
         font-family: var(--body-font-family);
     }
 
-    p {
-      max-width: 1200px;
-    }
-
     picture {
-        max-height: 100%;
+        height: 100%;
         img {
             max-height: 100%;
         }
@@ -72,24 +72,29 @@ section[is='hero-section'] picture img {
 } /* endfold */
 section[is='hero-section'].default { /* startfold */
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto auto 2fr;
+    grid-template-rows: auto auto auto auto;
     justify-items: center;
     align-items: center;
+    min-height: 100vh;
+    height: fit-content;
 }
 
 section[is='hero-section'].default > * {
     z-index: 10;
     grid-column: 1;
     text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 section[is='hero-section'].default h1 {
-    align-self: end;
     grid-row: 1;
+    align-self: end;
 }
 
 section[is='hero-section'].default h2 {
     grid-row: 2;
+    margin-bottom: 0;
 }
 
 section[is='hero-section'].default p {
@@ -102,6 +107,9 @@ section[is='hero-section'].default a {
 
 section[is='hero-section'].default picture {
     z-index: 1;
+    position: absolute;
+    height: 100%;
+    align-self: start;
 }
 section[is='hero-section'].default picture img {
     z-index: 1;
@@ -112,7 +120,7 @@ section[is='hero-section'].default picture img {
 /* endfold */
 section[is='hero-section'].alternate-one { /* startfold */
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto 1fr;
+    grid-template-rows: auto auto auto auto;
     justify-items: start;
     align-items: center;
 
@@ -120,8 +128,7 @@ section[is='hero-section'].alternate-one { /* startfold */
     z-index: 10;
     grid-column: 1;
     text-align: start;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 20px 25px;
   }
   h1 {
     align-self: end;
@@ -130,6 +137,9 @@ section[is='hero-section'].alternate-one { /* startfold */
   }
   h2 {
     grid-row: 2;
+    margin-bottom: 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
   p {
     grid-row: 3;
@@ -141,7 +151,9 @@ section[is='hero-section'].alternate-one { /* startfold */
   }
   picture {
     z-index: 1;
-    padding-left: 0;
+    position: absolute;
+    height: 100%;
+    padding: 0;
 
     img {
       z-index: 1;
@@ -152,20 +164,12 @@ section[is='hero-section'].alternate-one { /* startfold */
 
   @media screen and (min-width: base.$phone) {
     > * {
-        padding-left: 50px;
-        padding-right: 50px;
+        padding: 20px 50px;
     }
   }
   @media screen and (min-width: base.$notebook) {
-    grid-template-rows: 1fr auto auto 2fr;
-
     > * {
       padding-left: 100px;
-    }
-
-    a {
-        align-self: unset;
-        padding-bottom: unset;
     }
   }
 }
